# smashable

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
scripts/: pull_dictionaries.sh
